--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
   <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="css/swiper.css">
+  <link rel="stylesheet" href="swiper.css">
   <!-- Demo styles -->
-  <link href="css/default.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/garden.js"></script>
-<script type="text/javascript" src="js/functions.js"></script>
+  <link href="default.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="garden.js"></script>
+<script type="text/javascript" src="functions.js"></script>
   <style>
     html,
     body {
@@ -180,9 +180,9 @@ if (!document.createElement('canvas').getContext) {
   <!-- Swiper JS -->
   <script src="js/swiper.js"></script>
   <!--库-->
-  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
   <!--文字-->
-  <script type="text/javascript" src="js/text.js"></script>
+  <script type="text/javascript" src="text.js"></script>
 
 
   <!-- Initialize Swiper -->
