--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ if (!document.createElement('canvas').getContext) {
   </div>
 
   <!-- Swiper JS -->
-  <script src="js/swiper.js"></script>
+  <script src="swiper.js"></script>
   <!--库-->
   <script type="text/javascript" src="jquery.js"></script>
   <!--文字-->
