--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ if (!document.createElement('canvas').getContext) {
 				我期待着得与你的下一次的相遇<br>
 				你的一颦一笑，一言一行<br>
 				已深深印到我的脑海里<br>
-				深深流淌到我的心里<br>
+				流淌到我的心里<br>
 				我现所思所想<br>
 				正如背景乐一样<br>
 				满眼星辰皆是你<br>
