--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ if (!document.createElement('canvas').getContext) {
 				你的容貌，美丽、动人<br>
 				你的性情，温和、沉稳、而又感性<br>
 				
-				我珍惜着与你在一起的时光br>
+				我珍惜着与你在一起的时光<br>
 				每次的相聚也充满期待<br>
 				你的一颦一笑，一言一行<br>
 				已深深印到我的脑海里<br>
