--- a/index.html
+++ b/index.html
@@ -162,13 +162,10 @@ if (!document.createElement('canvas').getContext) {
 				<br>
 
 				
-				我期盼着与你在一起的时光<br>
+				我珍惜着与你在一起的时光<br>
 				所以每次的相聚都充满期待<br>
 				你的一颦一笑，一言一行<br>
 				已深深印到我的脑海里<br>
-				<br>
-				<br>
-			
 				我对你的爱与思念<br>
 				正如你所听到的一样<br>
 				满眼星辰皆是你<br>
