--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					<div>我们已经相识</div>
+					<div>时间这一刻已停止</div>
 					<div id="elapseClock"></div>
+					<br>
+					<div>有缘自会再相见，祝你幸福</div>
 				</div>
 			</div>
 			</div>
@@ -200,7 +202,7 @@ if (!document.createElement('canvas').getContext) {
       direction: 'vertical',
       pagination: {
         el: '.swiper-pagination',
-        clickable: true,
+        clickable: none,
       },
       on:{
 	       slideChangeTransitionEnd: function(){ 
