--- a/mysystem/index.html
+++ b/mysystem/index.html
@@ -13,12 +13,12 @@
 		
 		<div class="content clearfix">	
 			<a href="https://docs.qq.com/form/page/DWmV1R3NtTUpySFJp">每日一思</a>
-			<a href="https://mp.weixin.qq.com/cgi-bin/home?t=home/index&lang=zh_CN&token=1142241823">微信公众号</a>
+			<a href="https://mp.weixin.qq.com/cgi-bin/home?t=home/index&lang=zh_CN&token=1142241823 ">微信公众号</a>
 			<a href="https://docs.qq.com/form/page/DWlBsTndkQ2VTcXRi">急修上传</a>
 			<a href="">理财</a>
 			
-			<a href="https://github.com/">Github</a>
-			<a href="https://www.wjx.cn/Login.aspx?returnUrl=%2fnewwjx%2fmanage%2fmyquestionnaires.aspx">问卷星</a>
+			<a href="https://github.com/" target=＂_blank＂ >Github</a>
+			<a href="https://www.wjx.cn/Login.aspx?returnUrl=%2fnewwjx%2fmanage%2fmyquestionnaires.aspx" target=＂_blank＂>问卷星</a>
 			
 		</div>
 		
