--- a/mysystem/index.html
+++ b/mysystem/index.html
@@ -78,7 +78,7 @@
     	</script>
 		<div class="aphorism ">
 
-			<div style="margin-left: 30%; ">
+			<div >
 
 				1、凡事三思而后行<br / >
 				2、人无远虑，必有近忧<br / >
