--- a/mysystem/index-copy.html
+++ b/mysystem/index-copy.html
@@ -12,9 +12,9 @@
 <body>
 		
 		<div class="content clearfix">	
-			<a href="https://docs.qq.com/form/page/DWmV1R3NtTUpySFJp">每日一思</a>
+			<a href="https://docs.qq.com/form/page/DWmV1R3NtTUpySFJp">每日反思</a>
 			<a href="https://mp.weixin.qq.com/cgi-bin/home?t=home/index&lang=zh_CN&token=1142241823 ">微信公众号</a>
-			<a href="https://docs.qq.com/form/page/DWlBsTndkQ2VTcXRi">急修上传</a>
+			<a href="https://docs.qq.com/form/page/DWlBsTndkQ2VTcXRi">维修汇总</a>
 			<a href="">理财</a>
 			
 			<a href="https://github.com/" target=＂_blank＂ >Github</a>
