--- a/mysystem/index-copy.html
+++ b/mysystem/index-copy.html
@@ -15,7 +15,7 @@
 			<a href="https://docs.qq.com/form/page/DWmV1R3NtTUpySFJp" target=＂_blank＂ >每日反思</a>
 			<a href="https://mp.weixin.qq.com/cgi-bin/home?t=home/index&lang=zh_CN&token=1142241823 ">微信公众号</a>
 			<a href="https://docs.qq.com/form/page/DWlBsTndkQ2VTcXRi" target=＂_blank＂ >维修汇总</a>
-			<a href="https://docs.qq.com/sheet/DWnBTcExmck1JVmpO?tab=BB08J2&u=bad7c4750a964eaca9fa907887c73388">理财</a>
+			<a href="https://docs.qq.com/sheet/DWnBTcExmck1JVmpO?tab=BB08J2&u=bad7c4750a964eaca9fa907887c73388"   target=＂_blank＂ >理财</a>
 			
 			<a href="https://github.com/" target=＂_blank＂ >Github</a>
 			<a href="https://www.wjx.cn/Login.aspx?returnUrl=%2fnewwjx%2fmanage%2fmyquestionnaires.aspx" target=＂_blank＂>问卷星</a>
