--- a/index.html
+++ b/index.html
@@ -158,30 +158,29 @@ if (!document.createElement('canvas').getContext) {
     <div id="myContent"><span id="blink" style="display: none;">_</span></div>
     <!-- 第二页 -->
 		<div id="contentToWrite" style="display:none">
-      美丽的梦和美丽的诗一样　<br>
-      都是可遇而不可求的，<br>
-      常常在最没能料到的时刻里出现。<br>
-      我喜欢那样的梦，<br>
-      在梦里，一切都可以重新开始，<br>
-      一切都可以慢慢解释，<br>
-      心里甚至还能感觉到，<br>　
-      所有被浪费的时光<br>
-      竟然都能重回时的狂喜与感激。<br>
-      胸怀中满溢着幸福，<br>
-      只因你就在我眼前，<br>
-      对我微笑，一如当年。<br>　　
-      我真喜欢那样的梦，<br>
-      明明知道你已为我拔涉千里<br>
-      却又觉得芳草鲜美，落英缤纷，<br>
-      好象你我才初相遇。<br>
-    ---初相遇/席慕容<br>
+      亲爱的小琪　<br>
+      你知道吗<br>
+      早上和晚上的风都开始变冷了<br>
+      树叶也开始落了<br>
+      对了，我想你了<br>
+      下次见面应该也快了<br>
+      我不在的日子里要照顾好自己<br>　
+      不求风生水起<br>
+      只求我们不散<br>
+      还有平平安安的你<br>
+      <br>
+      <br>　　
+      <br>
+      <br>
+      
+       ----love <br>
  
   </div>
       </div>
       <!-- 第三页 -->
-      <div class="swiper-slide">
+     <!--  <div class="swiper-slide">
       	<iframe id="iframe" src="https://www.17sucai.com/preview/1424582/2020-01-18/qr/index.html" frameborder="0" width="100%" height="100%"></iframe>
-      </div>
+      </div -->>
   
     </div>
     <!-- Add Pagination -->
